# Web-MCP

./: .gitignore  .mcp.json  CLAUDE.md  README.md  claude_config.example.json  config.toml  conftest.py  engagement.example.toml  pyproject.toml  requirements.txt  to-do.md
.claude/: settings.json  settings.local.json
.claude/hooks/: block-engagement-toml.sh
.claude/skills/_template/: SKILL.md
.claude/skills/mcp-browser/: SKILL.md
MCPs/browser-mcp/: README.md  pyproject.toml
MCPs/browser-mcp/browser_mcp/: __init__.py  chrome_launcher.py  server.py  tools.py
MCPs/browser-mcp/tests/: test_chrome_launcher.py  test_tool_click.py  test_tool_close.py  test_tool_cookies.py  test_tool_eval.py  test_tool_fill.py  test_tool_identity.py  test_tool_launch.py  test_tool_navigate.py  test_tool_network_log.py  test_tool_query.py  test_tool_response_body.py  test_tool_screenshot.py  test_tool_snapshot.py  test_tool_wait_for.py
MCPs/burp-mcp/: README.md  pyproject.toml
MCPs/burp-mcp/burp-ext/: BUILD.md  build.gradle.kts  gradle.properties  settings.gradle.kts
MCPs/burp-mcp/burp-ext/src/main/kotlin/webmcp/: BurpMcpExtension.kt  HttpBridgeServer.kt  HttpSendRoutes.kt  IntruderRoutes.kt  Json.kt  MatchReplaceRoutes.kt  ProxyRoutes.kt  RepeaterRoutes.kt  Routes.kt  ScannerRoutes.kt  ScopeRoutes.kt  SiteMapRoutes.kt
MCPs/burp-mcp/burp-ext/src/test/kotlin/webmcp/: RoutesTest.kt
MCPs/burp-mcp/burp_mcp/: __init__.py  server.py  tool_handlers.py
MCPs/burp-mcp/tests/: test_as_identity.py  test_http_send_handler.py  test_oob_tools.py  test_other_handlers.py  test_pro_handlers.py  test_proxy_handlers.py  test_save_request_handler.py
MCPs/github-mcp/: .gitignore  README.md  UPSTREAM.txt  requirements.txt
MCPs/parley-mcp/: .gitignore  CHANGELOG.md  MCP_SETUP.md  README.md  UPSTREAM.txt  requirements.txt  run_server.py
common/: burp_client.py  cdp.py  config.py  credstore.py  engagement.py  evidence.py  logging.py  mcp_base.py  oob.py
common/mcp_armor/: README.md  UPSTREAM.txt  config.py  filter.py  logger.py  patterns.yaml  requirements.txt
docs/: engagement-setup.md  skill-conventions.md  source-informed-workflow.md
scripts/: build-all.sh  update-vendored.sh
tests/: conftest.py  test_common_burp_client.py  test_common_cdp.py  test_common_config.py  test_common_credstore.py  test_common_engagement.py  test_common_evidence.py  test_common_logging.py  test_common_mcp_base.py  test_common_oob.py  test_target_app.py
tests/fixtures/: README.md  target_app.py
tests/integration/: conftest.py  test_browser_only.py  test_chain_browser_burp.py
(+92 files in other folders)
