[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web-mcp-workspace"
version = "0.1.0"
description = "Web-MCP: four-MCP stack for AI-driven web security auditing"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
include = ["common*"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.5",
  "flask>=3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--import-mode=importlib"
markers = [
  "integration: end-to-end tests requiring real Chrome/Burp (opt-in via -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py313"
