[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "burp-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["mcp>=1.0.0", "httpx>=0.27"]

[project.scripts]
burp-mcp = "burp_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["burp_mcp*"]
